static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Orienta&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');


* {
    position: relative;
}

body {
    background-color: #525252;
}

a {
    -webkit-tap-highlight-color: transparent;
}

.navbar {
    top: 20px;
    border-radius: 23px;
    background-color: #404040;
    margin: 0px 20px;
    height: fit-content;
}

.navbar img {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    margin-right: 10px;
    margin-left: 20px;
    margin-top: 10px;
}

.navbar h1 {
    display: inline;
    margin-top: 10px;
    bottom: 15px;
    font-family: 'Orienta', sans-serif;
    color: #FFFFFF;
    font-size: 30px;
}

.navbar a {
    text-decoration: none;
}

#wanttologin {
    margin-right: 20px;
    margin-top: 40px;
    margin-left: 20px;
    padding: 20px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #404040;
    border: 2px solid #404040;
    border-radius: 57px;
}

#wanttologin a {
    text-decoration: none;
    color: #ffffff;
}

#mb_form {
    margin-right: 20px;
    max-width: 100%;
    margin-top: 40px;
    margin-left: 20px;
    padding: 10px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #404040;
    border: 2px solid #404040;
    border-radius: 57px;
}

#mb_form textarea {
    width: 100%;
    padding: 10px;
    margin: 10px 0;
    border-radius: 57px;
    border: 2px solid #ffffff;
    background-color: #404040;
    color: #afafaf;
}

#mb_form button {
    padding: 10px;
    margin: 10px 0;
    border-radius: 57px;
    border: 2px solid #ffffff;
    background-color: #404040;
    color: #afafaf;
    font-family: 'Inter', sans-serif;
    font-size: 20px;

}

#mb_form button:hover {
    background-color: #afafaf;
    color: #404040;
}

#mb_form a {
    padding: 10px;
    margin: 10px 0;
    border-radius: 57px;
    border: 2px solid #ffffff;
    background-color: #404040;
    color: #afafaf;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    text-decoration: none;
}

#mb_form a:hover {
    background-color: #afafaf;
    color: #404040;
}


hr {
    border: 1px solid #afafaf;
    margin: 20px 20px;
}

.message {
    margin-top: 40px;
    margin-left: 20px;
    margin-right: 20px;
    padding: 10px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #404040;
    border: 2px solid #404040;
    border-radius: 57px;
}

.message .profileimg {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    margin-right: 10px;
    margin-left: 20px;
    margin-top: 10px;
}

.message .uname {
    display: inline;
    margin-top: 10px;
    bottom: 15px;
    font-family: 'Orienta', sans-serif;
    color: #FFFFFF;
    font-size: 30px;
}

.message .pub_time {
    display: inline;
    margin-top: 10px;
    bottom: 15px;
    font-family: 'Inter', sans-serif;
    color: #afafaf;
    font-size: 20px;
    padding-left: 20px;
}

.message .content {
    /* margin-top: 10px; */
    margin-bottom: 0px;
    bottom: 12px;
    font-family: 'Inter', sans-serif;
    color: #ffffff;
    font-size: 20px;
    padding-left: 20px;
    word-wrap: break-word;
}

.message .content a{
    color: #ffffff;
    text-decoration: underline;
}

.message .reply {
    bottom: 12px;
    font-family: 'Inter', sans-serif;
    color: #afafaf;
    font-size: 20px;
    padding-left: 20px;
}

.message a {
    text-decoration: none;

}

.message:hover {
    border: #FFFFFF 2px solid;
}


@media screen and (min-width: 800px) {
    html {
        justify-content: center;
        width: 80%;
        margin-left: auto;
        margin-right: auto;
    }
}

#reg_form {
    margin-top: 40px;
    margin-left: 20px;
    margin-right: 10px;
    padding: 10px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #404040;
    border: 2px solid #404040;
    border-radius: 57px;
}

#reg_form input {
    width: 80%;
    padding: 10px;
    margin: 10px 0;
    border-radius: 57px;
    border: 2px solid #ffffff;
    background-color: #404040;
    color: #afafaf;
}

#reg_form button {
    padding: 10px;
    margin: 10px 0;
    border-radius: 57px;
    border: 2px solid #ffffff;
    background-color: #404040;
    color: #afafaf;
    font-family: 'Inter', sans-serif;
    font-size: 20px;

}

#reg_form button:hover {
    background-color: #afafaf;
    color: #404040;
}

#reg_form a {
    text-decoration: none;
    color: #ffffff;
}

#post_anonymous_warning {
    margin-top: 40px;
    margin-left: 20px;
    margin-right: 20px;
    padding: 10px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #404040;
    border: 2px solid #404040;
    border-radius: 57px;
}

#post_anonymous_warning a {
    text-decoration: none;
    color: #ffffff;
}

#post_anonymous_warning p {
    padding-left: 15px;
}

#privacy {
    margin-top: 40px;
    margin-left: 20px;
    margin-right: 20px;
    padding: 20px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #404040;
    border: 2px solid #404040;
    border-radius: 57px;
    word-wrap: break-word;
}

#privacy a {
    text-decoration: none;
    color: #ffffff;
}


#loadmore {
    margin-top: 40px;
    margin-left: 20px;
    margin-right: 20px;
    padding: 20px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #404040;
    border: 2px solid #404040;
    border-radius: 57px;

}

.lds-hourglass,
.lds-hourglass:after {
    box-sizing: border-box;
}

.lds-hourglass {
    display: inline-block;
    position: relative;
    width: 80px;
    height: 80px;
}

.lds-hourglass:after {
    content: " ";
    display: block;
    border-radius: 50%;
    width: 0;
    height: 0;
    margin: 8px;
    box-sizing: border-box;
    border: 32px solid currentColor;
    border-color: currentColor transparent currentColor transparent;
    animation: lds-hourglass 1.2s infinite;
}

@keyframes lds-hourglass {
    0% {
        transform: rotate(0);
        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }

    50% {
        transform: rotate(900deg);
        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    100% {
        transform: rotate(1800deg);
    }
}


.HideBtn {
    margin-left: 20px;
    margin-right: 20px;
    padding: 20px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #000000;
    border: 2px solid #ffffff;

    border-radius: 57px;
}

.MarkMightFakeBtn {
    margin-left: 20px;
    margin-right: 20px;
    padding: 20px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #333333;
    border: 2px solid #ffffff;
    border-radius: 57px;
}

.reaction {
    margin-left: 20px;
    margin-right: 20px;
    padding: 20px;
    font-family: 'Inter', sans-serif;
    font-size: 30px;
    color: #acacac;
    background-color: #303030;
    border: 2px solid #404040;
    border-radius: 57px;
    overflow: hidden;
    max-width: max-content;
    letter-spacing: 10px;
}

@media screen and (max-width: 800px) {
    .reaction {
        letter-spacing: 1px;
        margin-left: 0px;
    }

}


#root{
    margin-top: 40px;
    margin-left: 20px;
    margin-right: 20px;
    padding: 20px;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    color: #afafaf;
    background-color: #404040;
    border: 2px solid #404040;
    border-radius: 57px;
}

#root img{
    float:left;
    margin-right:5px;
}

#root h1{
    display:inline;
    font-family: 'Orienta', sans-serif;
    color: #FFFFFF;
    font-size: 30px;
}

#root p{
    font-family: 'Inter', sans-serif;
    color: #afafaf;
    font-size: 20px;
    padding-left: 20px;
}

